全体のバランス調整

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,14 +21,14 @@
   }
 }
 
-.nature{
+.natural{
   --color-primary: #e9e4e1;
   --color-secondary: #d1c4b8;
   --color-tertiary: #9f8772;
   --color-quaternary: #665A48;
 }
 
-.sky{
+.skyblue{
   --color-primary: #ecf4f7;
   --color-secondary: #a8daf3;
   --color-tertiary: #749BC2;
